chore: Adding temp workaround until https://github.com/unoplatform/uno/pull/17088 is merged
(cherry picked from commit b9d1224d2a60a28f1d3e2a392c4f01ffa5dd150d)

--- a/src/winappsdk-workaround.targets
+++ b/src/winappsdk-workaround.targets
@@ -18,4 +18,38 @@
 			<ReferenceCopyLocalPaths Remove="@(_OtherPriFiles2)" />
 		</ItemGroup>
 	</Target>
+
+	<!-- Workaround until https://github.com/unoplatform/uno/pull/17088 is merged -->
+	<PropertyGroup>
+		<!-- Copy from https://github.com/microsoft/WindowsAppSDK/pull/4124 -->
+		<ShouldComputeInputPris Condition="'$(ShouldComputeInputPris)' == '' AND ('$(OutputType)' == 'WinExe' OR '$(OutputType)' == 'Exe')">true</ShouldComputeInputPris>
+		<ShouldComputeInputPris Condition="'$(ShouldComputeInputPris)' == ''">false</ShouldComputeInputPris>
+	</PropertyGroup>
+
+	<Target Name="_UnoIncludeUIToolkit"
+		BeforeTargets="$(_UnoRemoveReferences_BeforeTargets)"
+		Condition="$(ShouldComputeInputPris)">
+
+		<!-- 
+		Since we're not using the standard packaging mechanism, the Uno.UI.Toolkit resources
+		need to be included explicitly.
+		-->
+
+		<ItemGroup>
+			<PriOutputs Include="$(PkgUno_WinUI)/lib/net8.0-windows10.0.19041.0/Uno.UI.Toolkit.pri"
+						TargetPath="Uno.UI.Toolkit.pri"
+						CopyLocal="True"
+						CopyToOutputDirectory="PreserveNewest"
+						OutputGroup="CopyLocalFilesOutputGroup" />
+			<_UnoUIToolkitAssets Include="$(PkgUno_WinUI)/lib/net8.0-windows10.0.19041.0/Uno.UI.Toolkit/**"/>
+			<None
+				Include="@(_UnoUIToolkitAssets)"
+				TargetPath="Uno.UI.Toolkit/%(RecursiveDir)%(Filename)%(Extension)"
+				CopyToOutputDirectory="PreserveNewest" />
+			<_UnoUIToolkitAssets Remove="@(_UnoUIToolkitAssets)" />
+		</ItemGroup>
+	</Target>
+
+	<!-- End Workaround until https://github.com/unoplatform/uno/pull/17088 is merged -->
+
 </Project>
