--- a/samples/MauiEmbedding/Directory.Packages.props
+++ b/samples/MauiEmbedding/Directory.Packages.props
@@ -2,12 +2,17 @@
 	<ItemGroup>
 		<PackageVersion Include="CommunityToolkit.Mvvm" Version="8.2.2" />
 		<PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
+		<PackageVersion Include="Microsoft.Maui.Controls" Version="8.0.3"/>
+		<PackageVersion Include="Microsoft.Maui.Controls.Compatibility"  Version="8.0.3"/>
 		<PackageVersion Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.3233" />
 		<PackageVersion Include="Microsoft.WindowsAppSDK" Version="$(WinAppSdkVersion)" />
 		<PackageVersion Include="SkiaSharp" Version="2.88.8" />
 		<PackageVersion Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.8" />
 		<PackageVersion Include="SkiaSharp.NativeAssets.iOS" Version="2.88.8" />
 		<PackageVersion Include="SkiaSharp.Skottie" Version="2.88.8" />
+		<PackageVersion Include="Syncfusion.Maui.Core" Version="22.2.9" />
+		<PackageVersion Include="Syncfusion.Maui.Charts" Version="22.2.9" />
+		<PackageVersion Include="Syncfusion.Maui.DataGrid" Version="22.2.9" />
 		<PackageVersion Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
 		<PackageVersion Include="Uno.Extensions.Logging.OSLog" Version="1.7.0" />
 		<PackageVersion Include="Uno.Material.WinUI" Version="5.0.13" />
