--- a/samples/MauiEmbedding/MauiEmbedding.MauiControls/MauiEmbedding.MauiControls.csproj
+++ b/samples/MauiEmbedding/MauiEmbedding.MauiControls/MauiEmbedding.MauiControls.csproj
@@ -16,10 +16,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.3"/>
-		<PackageReference Include="Microsoft.Maui.Controls.Compatibility"  Version="8.0.3"/>
-		<PackageReference Include="Syncfusion.Maui.Core" Version="22.2.9" />
-		<PackageReference Include="Syncfusion.Maui.Charts" Version="22.2.9" />
-		<PackageReference Include="Syncfusion.Maui.DataGrid" Version="22.2.9" />
+		<PackageReference Include="Microsoft.Maui.Controls" />
+		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" />
+		<PackageReference Include="Syncfusion.Maui.Core" />
+		<PackageReference Include="Syncfusion.Maui.Charts" />
+		<PackageReference Include="Syncfusion.Maui.DataGrid" />
 	</ItemGroup>
 </Project>
