chore: Limiting winappsdk workaround to just winappsdk targets
(cherry picked from commit b478def1abaae03242d49dcb6b33b72799735355)

--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -86,7 +86,7 @@
 		<WriteLinesToFile File="$(_AndroidResourceDesignerFile)" Lines="// Empty Content from uno.ui Directory.Build.targets." />
 	</Target>
 
-	<Import Project="winappsdk-workaround.targets" Condition="exists('winappsdk-workaround.targets')" />
+	<Import Project="winappsdk-workaround.targets" Condition="exists('winappsdk-workaround.targets') and $(TargetFramework.Contains('windows10'))" />
 	<Import Project="xamarinmac-workaround.targets" Condition="exists('xamarinmac-workaround.targets') and $(TargetFramework.ToLower().StartsWith('xamarin')) and $(TargetFramework.ToLower().Contains('mac'))" />
 	<Import Project="Directory.UnoMetadata.targets" />
 
