chore: setting mauicontrols to not use cpm

--- a/samples/MauiEmbedding/Directory.Build.props
+++ b/samples/MauiEmbedding/Directory.Build.props
@@ -20,6 +20,7 @@
 		<IsMacCatalyst>false</IsMacCatalyst>
 		<IsWinAppSdk>false</IsWinAppSdk>
 		<_UseTelerik>false</_UseTelerik>
+		<ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
 	</PropertyGroup>
 
 	<Choose>
