--- a/samples/MauiEmbedding/MauiEmbedding.MauiControls/MauiEmbedding.MauiControls.csproj
+++ b/samples/MauiEmbedding/MauiEmbedding.MauiControls/MauiEmbedding.MauiControls.csproj
@@ -13,13 +13,15 @@
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
 		<TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
+
+		<ManagePackageVersionsCentrally>false</ManagePackageVersionsCentrally>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Maui.Controls" />
-		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" />
-		<PackageReference Include="Syncfusion.Maui.Core" />
-		<PackageReference Include="Syncfusion.Maui.Charts" />
-		<PackageReference Include="Syncfusion.Maui.DataGrid" />
+		<PackageReference Include="Microsoft.Maui.Controls" Version="8.0.3"/>
+		<PackageReference Include="Microsoft.Maui.Controls.Compatibility"  Version="8.0.3"/>
+		<PackageReference Include="Syncfusion.Maui.Core" Version="22.2.9" />
+		<PackageReference Include="Syncfusion.Maui.Charts" Version="22.2.9" />
+		<PackageReference Include="Syncfusion.Maui.DataGrid" Version="22.2.9" />
 	</ItemGroup>
 </Project>
