--- a/samples/Playground/Playground.Skia.Gtk/Playground.Skia.Gtk.csproj
+++ b/samples/Playground/Playground.Skia.Gtk/Playground.Skia.Gtk.csproj
@@ -12,10 +12,11 @@
 
   <ItemGroup>
     <PackageReference Include="Uno.WinUI.Skia.Gtk" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" />
+		<PackageReference Include="Uno.WinUI" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Console" />
     <PackageReference Include="SkiaSharp.Views.Uno.WinUI" />
     <PackageReference Include="SkiaSharp.Skottie" />
-    <!--<PackageReference Include="Uno.WinUI.DevServer" Condition="'$(Configuration)'=='Debug'" />-->
+    <PackageReference Include="Uno.WinUI.DevServer" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" />
   </ItemGroup>
 
