--- a/testing/TestHarness/Directory.Packages.props
+++ b/testing/TestHarness/Directory.Packages.props
@@ -48,7 +48,7 @@
 		<PackageVersion Include="Uno.UI" Version="5.2.132" />
 		<PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.2.132" />
 		<PackageVersion Include="Uno.UI.MSAL" Version="5.2.132" />
-		<PackageVersion Include="Uno.UI.RemoteControl" Version="5.2.132" />
+		<PackageVersion Include="Uno.UI.DevServer" Version="5.2.132" />
 		<PackageVersion Include="Uno.UI.Skia.Gtk" Version="5.2.132" />
 		<PackageVersion Include="Uno.UI.Skia.Linux.FrameBuffer" Version="5.2.132" />
 		<PackageVersion Include="Uno.UI.Skia.Tizen" Version="5.2.132" />
@@ -66,7 +66,7 @@
 		<PackageVersion Include="Uno.WinUI.Skia.Linux.FrameBuffer" Version="5.2.132" />
 		<PackageVersion Include="Uno.WinUI.Skia.Wpf" Version="5.2.132" />
 		<PackageVersion Include="Uno.WinUI.MSAL" Version="5.2.132" />
-		<PackageVersion Include="Uno.WinUI.RemoteControl" Version="5.2.132" />
+		<PackageVersion Include="Uno.WinUI.DevServer" Version="5.2.132" />
 		<PackageVersion Include="Uno.WinUI.WebAssembly" Version="5.2.132" />
 		<PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
 		<PackageVersion Include="Newtonsoft.Json" Version="13.0.2" />
