--- a/testing/TestHarness/TestHarness.Legacy.Wasm/TestHarness.Legacy.Wasm.csproj
+++ b/testing/TestHarness/TestHarness.Legacy.Wasm/TestHarness.Legacy.Wasm.csproj
@@ -54,7 +54,7 @@
 		<PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI" />
 		<PackageReference Include="Microsoft.Identity.Client" />
 		<PackageReference Include="Uno.UI" />
-		<PackageReference Include="Uno.UI.RemoteControl" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.UI.DevServer" Condition="'$(Configuration)'=='Debug'" />
 		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" />
 		<PackageReference Include="Microsoft.Extensions.Logging" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" />
