--- a/testing/TestHarness/TestHarness.Mobile/TestHarness.Mobile.csproj
+++ b/testing/TestHarness/TestHarness.Mobile/TestHarness.Mobile.csproj
@@ -27,7 +27,7 @@
 		<PackageReference Include="IdentityModel.OidcClient" />
 		<PackageReference Include="Microsoft.Identity.Client" />
 		<PackageReference Include="Uno.WinUI" />
-		<PackageReference Include="Uno.WinUI.RemoteControl" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.WinUI.DevServer" Condition="'$(Configuration)'=='Debug'" />
 		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" />
 		<PackageReference Include="Microsoft.Extensions.Logging" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" />
