--- a/testing/TestHarness/TestHarness.Skia.Linux.FrameBuffer/TestHarness.Skia.Linux.FrameBuffer.csproj
+++ b/testing/TestHarness/TestHarness.Skia.Linux.FrameBuffer/TestHarness.Skia.Linux.FrameBuffer.csproj
@@ -19,7 +19,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" />
     <PackageReference Include="Uno.WinUI.Skia.Linux.FrameBuffer" />
-    <PackageReference Include="Uno.WinUI.RemoteControl" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.WinUI.DevServer" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" />
   </ItemGroup>
 	<ItemGroup>
