--- a/doc/Learn/Navigation/toc.yml
+++ b/doc/Learn/Navigation/toc.yml
@@ -8,6 +8,8 @@
   href: xref:Uno.Extensions.Navigation.HowToNavigateInXAML
 - name: "How-To: Define Routes"
   href: xref:Uno.Extensions.Navigation.HowToDefineRoutes
+- name: "How-To: Define Regions"
+  href: xref:Uno.Extensions.Navigation.Regions
 - name: "How-To: Display a message dialog"
   href: xref:Uno.Extensions.Navigation.HowToDisplayMessageDialog
 - name: "How-To: Request a value"
