--- a/src/Uno.Extensions.Logging/buildTransitive/Uno.Extensions.Logging.UWP.props
+++ b/src/Uno.Extensions.Logging/buildTransitive/Uno.Extensions.Logging.UWP.props
@@ -2,7 +2,7 @@
 <Project>
 
 	<ItemGroup>
-		<UnoRuntimeEnabledPackage Include="Uno.Extensions.Logging.UWP" PackageBasePath="$(MSBuildThisFileDirectory)" />
+		<UnoRuntimeEnabledPackage Include="Uno.Extensions.Logging.UWP" PackageBasePath="$(MSBuildThisFileDirectory)..\" />
 	</ItemGroup>
 
 </Project>
