chore: Adjust main TOC to remove unnecessary additional TOC for Theme Service, as there is currently only one page document
(cherry picked from commit de5b070018c263c4479b365f53fd4e02fccb1177)

--- a/doc/toc.yml
+++ b/doc/toc.yml
@@ -48,8 +48,7 @@
   href: Learn/Maui/toc.yml
   topicHref: xref:Uno.Extensions.Maui.Overview
 - name: Theme Service
-  href: Learn/ThemeService/toc.yml
-  topicHref: xref:Uno.Extensions.ThemeService.Overview
+  href: xref:Uno.Extensions.ThemeService.Overview
 - name: Reference
   items:
     - name: MVUX
