--- a/.github/workflows/azure-static-app.yml
+++ b/.github/workflows/azure-static-app.yml
@@ -38,10 +38,10 @@ jobs:
           useConfigFile: true
           configFilePath: build/ci/gitversion.yml
 
-      - name: Setup dotnet 7.0.x
+      - name: Setup dotnet 8.0.301
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '7.0.x'
+          dotnet-version: '8.0.301'
 
       - run: |
           cd testing/TestHarness
