--- a/testing/TestHarness/TestHarness/TestHarness.csproj
+++ b/testing/TestHarness/TestHarness/TestHarness.csproj
@@ -76,17 +76,19 @@
 		<ProjectReference Include="..\TestHarness.Core\TestHarness.Core.csproj" />
 
 		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton"/>
+		<PackageReference Include="Uno.WinUI" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging"/>
 		<!--<PackageReference Include="Uno.Wasm.Bootstrap" />
 		<PackageReference Include="Uno.Wasm.Bootstrap.DevServer" />
 		<PackageReference Include="Uno.Resizetizer" />-->
 	</ItemGroup>
 
+	<ItemGroup Condition="'$(IsBrowserWasm)'=='true'">
+		<PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" />
+	</ItemGroup>
 
-
-	<ItemGroup>
-		<None Update="MainPage.xaml">
-			<Generator>MSBuild:Compile</Generator>
-		</None>
+	<ItemGroup Condition="'$(IsIOSOrCatalyst)' == 'true'">
+		<PackageReference Include="Uno.Extensions.Logging.OSLog" />
 	</ItemGroup>
 
 </Project>
