--- a/samples/MauiEmbedding/MauiEmbedding/MauiEmbedding.csproj
+++ b/samples/MauiEmbedding/MauiEmbedding/MauiEmbedding.csproj
@@ -40,6 +40,9 @@
 		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton"/>
 	</ItemGroup>
 
+	<ItemGroup Condition="'$(IsIOSOrCatalyst)' == 'true'">
+		<PackageReference Include="Uno.Extensions.Logging.OSLog" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\..\src\Uno.Extensions.Core.UI\Uno.Extensions.Core.WinUI.csproj" />
