--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -36,8 +36,6 @@
 		<PackageVersion Include="Microsoft.Net.Compilers.Toolset" Version="4.2.0" />
 		<PackageVersion Include="Microsoft.SourceLink.GitHub" Version="1.1.1" />
 		<PackageVersion Include="Microsoft.UI.Xaml" Version="2.7.1" />
-		<!-- <PackageVersion Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.3233" /> -->
-		<!-- <PackageVersion Include="Microsoft.WindowsAppSDK" Version="$(WinAppSdkVersion)" /> -->
 		<PackageVersion Include="Microsoft.Graphics.Win2D" Version="1.2.0" />
 		<PackageVersion Include="Moq" Version="4.17.2" />
 		<PackageVersion Include="Refit" Version="6.3.2" />
@@ -63,21 +61,16 @@
 		<PackageVersion Include="Uno.Extensions.Markup.WinUI" Version="5.3.12" />
 		<PackageVersion Include="Uno.Roslyn" Version="1.3.0-dev.12" />
 		<PackageVersion Include="Uno.Toolkit" Version="6.1.7" />
-		<!--<PackageVersion Include="Uno.Toolkit.UI" Version="5.0.15" />
-		<PackageVersion Include="Uno.Toolkit.WinUI" Version="5.0.15" />-->
-		<!--<PackageVersion Include="Uno.UI" Version="$(UnoVersion)" />-->
 		<PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="$(UnoVersion)"/>
-		<!--<PackageVersion Include="Uno.UI.MSAL"  Version="$(UnoVersion)" />
-		<PackageVersion Include="Uno.UI.Runtime.WebAssembly" Version="$(UnoVersion)" />-->
+
 		<PackageVersion Include="Uno.UI.RuntimeTests.Engine" Version="0.37.0-dev.126" />
-		<!--<PackageVersion Include="Uno.WinUI" Version="$(UnoVersion)" />-->
+		<PackageVersion Include="Uno.WinUI" Version="$(UnoVersion)" />
 		<PackageVersion Include="Uno.WinUI.Markup" Version="5.3.12" />
 		<PackageVersion Include="Uno.WinUI.MSAL" Version="$(UnoVersion)" />
-		<!--<PackageVersion Include="Uno.WinUI.Runtime.WebAssembly" Version="$(UnoVersion)" />-->
 		<PackageVersion Include="coverlet.collector" Version="3.1.2" />
 		<PackageVersion Include="xunit" Version="2.4.1" />
 		<PackageVersion Include="xunit.runner.visualstudio" Version="2.4.1" />
 		<PackageVersion Include="System.ComponentModel.Annotations" Version="5.0.0" />
-		<PackageVersion Include="FluentValidation " Version="11.4.0" />
+		<PackageVersion Include="FluentValidation" Version="11.4.0" />
 	</ItemGroup>
 </Project>
