chore: backport msal fix

--- a/src/Uno.Extensions.Authentication.MSAL/Uno.Extensions.Authentication.MSAL.UI.csproj
+++ b/src/Uno.Extensions.Authentication.MSAL/Uno.Extensions.Authentication.MSAL.UI.csproj
@@ -38,8 +38,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Uno.UI" />
-		<!-- MSAL isn't supported on skia targets, macos or maccatalyst -->
-		<PackageReference Include="Uno.UI.MSAL" Condition="'$(IsMSALSupported)'=='true'" />
+		<PackageReference Include="Uno.UI.MSAL" />
 	</ItemGroup>
 
 	<ItemGroup>
