--- a/src/Uno.Extensions.Authentication.MSAL/Uno.Extensions.Authentication.MSAL.WinUI.csproj
+++ b/src/Uno.Extensions.Authentication.MSAL/Uno.Extensions.Authentication.MSAL.WinUI.csproj
@@ -50,8 +50,7 @@
 
 	<ItemGroup >
 		<PackageReference Include="Uno.WinUI" />
-		<!-- MSAL isn't supported on skia targets, macos or maccatalyst -->
-		<PackageReference Include="Uno.WinUI.MSAL" Condition="'$(IsMSALSupported)'=='true'" />
+		<PackageReference Include="Uno.WinUI.MSAL" />
 	</ItemGroup>
 
 	<ItemGroup>
