--- a/src/Uno.Extensions.Authentication.MSAL/common.props
+++ b/src/Uno.Extensions.Authentication.MSAL/common.props
@@ -2,11 +2,9 @@
 	<PropertyGroup>
 		<!--Temporary disable missing XML doc until fixed in the whole package-->
 		<WarningsNotAsErrors>$(WarningsNotAsErrors);CS1591</WarningsNotAsErrors>
-		<IsMSALSupported>false</IsMSALSupported>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(_IsNetStd)'!='true' and '$(_IsMacOS)'!='true' and '$(_IsCatalyst)'!='true'" >
-		<IsMSALSupported>true</IsMSALSupported>
 		<DefineConstants>$(DefineConstants);UNO_EXT_MSAL</DefineConstants>
 	</PropertyGroup>
 
@@ -23,8 +21,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Localization.Abstractions" />
-		<PackageReference Include="Microsoft.Identity.Client" Condition="'$(IsMSALSupported)'=='true'" />
-		<PackageReference Include="Microsoft.Identity.Client.Extensions.Msal" Condition="'$(IsMSALSupported)'=='true'" />
+		<PackageReference Include="Microsoft.Identity.Client" />
+		<PackageReference Include="Microsoft.Identity.Client.Extensions.Msal" />
 	</ItemGroup>
 
 	<ItemGroup>
