docs: fix messaging not showing from menu
(cherry picked from commit d2ea8231eb70f6d83ad1044c0b2eb42d7bf518d8)

--- a/doc/Learn/Mvux/toc.yml
+++ b/doc/Learn/Mvux/toc.yml
@@ -29,6 +29,8 @@
       href: xref:Uno.Extensions.Mvux.Advanced.Selection
     - name: Pagination
       href: xref:Uno.Extensions.Mvux.Advanced.Pagination
+    - name: Messaging
+      href: xref:Uno.Extensions.Mvux.Advanced.Messaging
     - name: Commands
       href: xref:Uno.Extensions.Mvux.Advanced.Commands
     - name: Inspecting the generated code
