--- a/src/Uno.Extensions.Authentication/Uno.Extensions.Authentication.csproj
+++ b/src/Uno.Extensions.Authentication/Uno.Extensions.Authentication.csproj
@@ -12,6 +12,16 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <None Remove="LinkerDefinition.xml" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Include="LinkerDefinition.xml">
+	    <LogicalName>$(AssemblyName).xml</LogicalName>
+	  </EmbeddedResource>
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\Uno.Extensions.Core\Uno.Extensions.Core.csproj" />
 		<ProjectReference Include="..\Uno.Extensions.Storage\Uno.Extensions.Storage.csproj" />
 		<ProjectReference Include="..\Uno.Extensions.Http\Uno.Extensions.Http.csproj" />
