--- a/src/Uno.Extensions.Storage/Uno.Extensions.Storage.csproj
+++ b/src/Uno.Extensions.Storage/Uno.Extensions.Storage.csproj
@@ -13,6 +13,14 @@
 	<ItemGroup>
 		<Compile Remove="KeyValueStorage\ApplicationDataKeyedStorage.cs" />
 	</ItemGroup>
+	<ItemGroup>
+	  <None Remove="LinkerDefinition.xml" />
+	</ItemGroup>
+	<ItemGroup>
+	  <EmbeddedResource Include="LinkerDefinition.xml">
+	    <LogicalName>$(AssemblyName).xml</LogicalName>
+	  </EmbeddedResource>
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
