--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -46,7 +46,7 @@
 		<PackageVersion Include="Serilog.Sinks.Debug" Version="2.0.0" />
 		<PackageVersion Include="Serilog.Sinks.File" Version="5.0.0" />
 		<PackageVersion Include="Serilog.Sinks.Xamarin" Version="1.0.0" />
-		<PackageVersion Include="System.Collections.Immutable" Version="1.3.1" /> <!--Lower version breaks build of reactive.<UI|WinUI>-->
+		<PackageVersion Include="System.Collections.Immutable" Version="8.0.0" /> 
 		<PackageVersion Include="System.Linq.Async" Version="4.0.0" />
 		<PackageVersion Include="System.Net.Http.WinHttpHandler" Version="6.0.1" />
 		<PackageVersion Include="System.Text.Json" Version="8.0.4" />
@@ -60,7 +60,7 @@
 		<PackageVersion Include="Uno.Extensions.Markup.Generators" Version="5.3.12" />
 		<PackageVersion Include="Uno.Extensions.Markup.WinUI" Version="5.3.12" />
 		<PackageVersion Include="Uno.Roslyn" Version="1.3.0-dev.12" />
-		<PackageVersion Include="Uno.Toolkit" Version="6.1.7" />
+		<PackageVersion Include="Uno.Toolkit" Version="6.1.8" />
 		<PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="$(UnoVersion)"/>
 
 		<PackageVersion Include="Uno.UI.RuntimeTests.Engine" Version="0.37.0-dev.126" />
@@ -72,5 +72,9 @@
 		<PackageVersion Include="xunit.runner.visualstudio" Version="2.4.1" />
 		<PackageVersion Include="System.ComponentModel.Annotations" Version="5.0.0" />
 		<PackageVersion Include="FluentValidation" Version="11.4.0" />
+
+		<PackageVersion Include="System.Private.Uri" Version="4.3.2" />
+		<PackageVersion Include="System.Net.Http" Version="4.3.4" />
+		<PackageVersion Include="System.Text.RegularExpressions" Version="4.3.1" />
 	</ItemGroup>
 </Project>
