--- a/src/Uno.Extensions.Core/Uno.Extensions.Core.csproj
+++ b/src/Uno.Extensions.Core/Uno.Extensions.Core.csproj
@@ -12,7 +12,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" />
-		<PackageReference Include="System.Collections.Immutable" /><!--Lower version breaks build of reactive.<UI|WinUI>-->
+		<PackageReference Include="System.Collections.Immutable" />
 		<PackageReference Include="System.Threading.Tasks.Extensions" />
 	</ItemGroup>
 
