docs: add extensions reactive upgrade node
(cherry picked from commit c883606f838937adadac94d9a839b50e0726313c)

--- a/doc/toc.yml
+++ b/doc/toc.yml
@@ -72,6 +72,8 @@
           href: Reference/Reactive/Architecture.md
         - name: Analysis rules
           href: Reference/Reactive/rules.md
+    - name: Upgrading Extensions Reactive
+      href: reactive-migration.md
     # - name: Navigation
     #   href: Reference/Navigation/Navigation.md
     #   items:
