docs: move node to a different level
(cherry picked from commit f5277d12dc1c252ebffb74cca6a55a467fdfaa45)

--- a/doc/Learn/Mvux/toc.yml
+++ b/doc/Learn/Mvux/toc.yml
@@ -1,6 +1,8 @@
 
 - name: Overview
   href: xref:Uno.Extensions.Mvux.Overview
+- name: Upgrading Extensions Reactive
+  href: xref:Uno.Extensions.Reactive.Upgrading
 - name: "How-To: Get started with MVUX"
   href: xref:Uno.Extensions.Mvux.HowToMvuxProject
 - name: "Working with Records"
