chore: change PLO get and set for Windows

--- a/src/Uno.Extensions.Localization.UI/Uno.Extensions.Localization.WinUI.csproj
+++ b/src/Uno.Extensions.Localization.UI/Uno.Extensions.Localization.WinUI.csproj
@@ -10,6 +10,8 @@
 
 		<UnoSingleProject>true</UnoSingleProject>
 		<OutputType>Library</OutputType>
+
+		<WinAppSdkVersion>1.6.240923002</WinAppSdkVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
