docs: update mvux upgrade title

--- a/doc/Learn/Mvux/toc.yml
+++ b/doc/Learn/Mvux/toc.yml
@@ -1,7 +1,7 @@
 
 - name: Overview
   href: xref:Uno.Extensions.Mvux.Overview
-- name: Upgrading Extensions Reactive
+- name: Upgrading MVUX
   href: xref:Uno.Extensions.Reactive.Upgrading
 - name: "How-To: Get started with MVUX"
   href: xref:Uno.Extensions.Mvux.HowToMvuxProject
