fix: use SkiaSharpVersion property

--- a/testing/TestHarness/Directory.Packages.props
+++ b/testing/TestHarness/Directory.Packages.props
@@ -25,14 +25,6 @@
 		<PackageVersion Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.3233" />
 		<PackageVersion Include="Refit" Version="6.3.2" />
 		<PackageVersion Include="Refit.HttpClientFactory" Version="6.3.2" />
-		<PackageVersion Include="SkiaSharp" Version="2.88.8" />
-		<PackageVersion Include="SkiaSharp.NativeAssets.Linux" Version="2.88.8" />
-		<PackageVersion Include="SkiaSharp.HarfBuzz" Version="2.88.8" />
-		<PackageVersion Include="SkiaSharp.Skottie" Version="2.88.8" />
-		<PackageVersion Include="SkiaSharp.Views" Version="2.88.8" />
-		<PackageVersion Include="SkiaSharp.Views.Uno" Version="2.88.8" />
-		<PackageVersion Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.8" />
-		<PackageVersion Include="SkiaSharp.Views.WPF" Version="2.88.8" />
 		<PackageVersion Include="Swashbuckle.AspNetCore" Version="6.2.3" />
 		<PackageVersion Include="System.ComponentModel.Annotations" Version="5.0.0" />
 		<PackageVersion Include="Uno.CommunityToolkit.WinUI.UI" Version="7.1.100" />
@@ -61,4 +53,7 @@
 		<PackageVersion Include="System.Text.Json" Version="8.0.4" />
 	</ItemGroup>
 
+	<PropertyGroup>
+		<SkiaSharpVersion>2.88.8</SkiaSharpVersion>
+	</PropertyGroup>
 </Project>
