--- a/testing/TestHarness/Directory.Build.props
+++ b/testing/TestHarness/Directory.Build.props
@@ -35,4 +35,8 @@
 		<RootNamespace>TestHarness</RootNamespace>
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
+
+	<PropertyGroup>
+		<SkiaSharpVersion>2.88.9-preview.2.2</SkiaSharpVersion>
+	</PropertyGroup>
 </Project>
