--- a/testing/TestHarness/TestHarness.UITest/TestHarness.UITest.csproj
+++ b/testing/TestHarness/TestHarness.UITest/TestHarness.UITest.csproj
@@ -25,6 +25,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageVersion Include="SkiaSharp" Version="2.88.8" />
+		<PackageVersion Include="SkiaSharp.NativeAssets.Linux" Version="2.88.8" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\TestHarness.Core\TestHarness.Core.csproj" />
 	</ItemGroup>
 
