--- a/src/Uno.Extensions.Reactive.UI/Uno.Extensions.Reactive.WinUI.csproj
+++ b/src/Uno.Extensions.Reactive.UI/Uno.Extensions.Reactive.WinUI.csproj
@@ -8,7 +8,7 @@
 	<PropertyGroup>
 		<AssemblyName>Uno.Extensions.Reactive.UI</AssemblyName>
 		<ImplicitUsings>false</ImplicitUsings>
-
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		<Description>Reactive Extensions for the Uno Platform (WinUI)</Description>
 		<EnableDefaultPageItems>false</EnableDefaultPageItems>
 		<DefineConstants>$(DefineConstants);WINUI</DefineConstants>
