--- a/samples/MauiEmbedding/MauiEmbedding/MauiEmbedding.csproj
+++ b/samples/MauiEmbedding/MauiEmbedding/MauiEmbedding.csproj
@@ -69,15 +69,19 @@
 	<Import Project="..\..\..\src\Uno.Extensions.Navigation\build\Package.targets" />
 	<Import Project="..\..\..\src\Uno.Extensions.Navigation.UI\build\Package.targets" />
 
-
+	<ItemGroup Condition="'$(IsAndroid)' == 'true'">
+		<PackageReference Include="Xamarin.AndroidX.Navigation.UI" />
+		<PackageReference Include="Xamarin.AndroidX.Navigation.Fragment" />
+		<PackageReference Include="Xamarin.AndroidX.Navigation.Runtime" />
+		<PackageReference Include="Xamarin.AndroidX.Navigation.Common" />
+		<PackageReference Include="Xamarin.AndroidX.Collection" />
+		<PackageReference Include="Xamarin.AndroidX.Collection.Jvm" />
+		<PackageReference Include="Xamarin.AndroidX.Collection.Ktx"  />
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Maui.Controls" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility"/>
 		<PackageReference Include="Microsoft.Maui.Graphics"  />
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(IsAndroid)' == 'true'">
-		<PackageReference Include="Xamarin.AndroidX.Collection.Jvm"  />
 	</ItemGroup>
 </Project>
